force-app/main/default/objects/custom_create101__c/custom_create101__c.object-meta.xml
<CustomObject>
    <label>Custom created object101</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects101</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>