force-app/main/default/objects/custom_create101__c/fields/custom_create_101field595__c.field-meta.xml
<CustomField>
    <fullName>custom_create_101field595__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 101field595</label>
    <type>Checkbox</type>
</CustomField>